# SuperNova

./: .gitattributes  .gitignore  CLAUDE.md  SuperNovaBets_Audit_Report.md  example_fetch.py  pyproject.toml  run_db_setup.py
.claude/: settings.local.json
reports/: daily_2026-02-06.md  daily_2026-03-11.md  daily_2026-03-12.md  daily_2026-03-13.md  daily_2026-03-15.md  daily_2026-03-16.md  discord_preview_games_2026-06-11.txt  discord_preview_props_2026-06-11.txt  mlb_bankroll_ledger_2026-06-02.md  mlb_daily_2026-03-29.md  mlb_daily_2026-04-14.md  mlb_daily_2026-04-25_close.md  mlb_daily_2026-04-26_close.md  mlb_daily_2026-04-27_close.md  mlb_daily_2026-04-28_close.md  mlb_daily_2026-04-29.md  mlb_daily_2026-04-29_close.md  mlb_daily_2026-04-30_close.md  mlb_daily_2026-05-01_close.md  mlb_daily_2026-05-02_close.md  mlb_daily_2026-05-03_close.md  mlb_daily_2026-05-04_close.md  mlb_daily_2026-05-05_close.md  mlb_daily_2026-05-06_close.md  mlb_daily_2026-05-07_close.md  mlb_daily_2026-05-08_close.md  mlb_daily_2026-05-09_close.md  mlb_daily_2026-05-10_close.md  mlb_daily_2026-05-11_close.md  mlb_daily_2026-05-12_close.md  mlb_daily_2026-05-13_close.md  mlb_daily_2026-05-14_close.md  mlb_daily_2026-05-15_close.md  mlb_daily_2026-05-16_close.md  mlb_daily_2026-05-17_close.md  mlb_daily_2026-05-18_close.md  mlb_daily_2026-05-19_close.md  mlb_daily_2026-05-20_close.md  mlb_daily_2026-05-21_close.md  mlb_daily_2026-05-22_close.md  (+107 more)
scripts/: install_tasks.ps1  mlb_close.bat  mlb_morning.bat  mlb_pregame.bat  mlb_training.bat  run_with_mlb_mutex.ps1
src/: __init__.py
(+352 files in other folders)
