[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "supernovabets"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "httpx",
    "joblib",
    "lightgbm",
    "numpy",
    "pandas",
    "pillow",
    "psycopg2-binary",
    "pytest",
    "requests",
    "scipy",
    "scikit-learn",
    "sqlalchemy",
    "xgboost",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
